# structly

./: .gitignore  Cargo.toml  LICENSE  README.md  relcon.toml
examples/: basic.rs  conditional.rs  deployment.rs  multiple_ifs.rs  nested_config.rs  server_config.rs
src/: lib.rs
structly_cli/: Cargo.toml
structly_cli/src/: main.rs
structly_cli/tests/: cli.rs
structly_cli/tests/fixtures/: config.rs
structly_core/: Cargo.toml
structly_core/src/: lib.rs
structly_macros/: Cargo.toml
structly_macros/src/: lib.rs
tests/: compile_fail.rs  derive.rs  modes.rs  modes_multi.rs  multi_field.rs  nested.rs  runtime.rs  structly_if.rs  verify.rs
tests/compile_fail/: duplicate_description.rs  duplicate_description.stderr  duplicate_mode.rs  duplicate_mode.stderr  duplicate_name.rs  duplicate_name.stderr  invalid_mode.rs  invalid_mode.stderr  on_enum.rs  on_enum.stderr  tuple_struct.rs  tuple_struct.stderr  unknown_argument.rs  unknown_argument.stderr
