[package]
name = "structly_cli"
description = "CLI for structly: generate markdown documentation for #[derive(Structly)] structs by parsing your source code."
# https://doc.rust-lang.org/cargo/reference/workspaces.html
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "structly"
path = "src/main.rs"

[dependencies]
structly_core = { path = "../structly_core", version = "0.1.0" }
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
