[package]
name = "structly_core"
description = "Shared attribute parsing, documentation model, and markdown rendering for structly. Not intended for direct use."
# https://doc.rust-lang.org/cargo/reference/workspaces.html
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
