[package]
name = "structly_macros"
description = "Derive macros for structly. Not intended for direct use - use the structly crate."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
structly_core = { path = "../structly_core", version = "0.2.0" }
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
